--- a/css/css.css
+++ b/css/css.css
@@ -154,6 +154,7 @@ a{
     background: linear-gradient(180deg, rgba(163,154,249,1) 0%, rgba(252,254,236,1) 30%);
     min-height: 100vh;
     padding-top: 10vh;
+    padding-bottom: 15vh;
 }
 #works .works_title{
     font-size: 2em;
@@ -254,9 +255,9 @@ a{
 #popup_wrapper{
     position: fixed;
     background: var(--background);
-    width: 50vw;
-    height: 70vh;
-    max-height: 70vh;
+    width: 70vw;
+    height: 100vh;
+    max-height: 85vh;
     opacity: 0;
 }
 @media (max-width: 768px) {
@@ -302,6 +303,21 @@ a{
     width: 100%;
     height: 84%;
     overflow-y: auto;
+}
+
+#popup_wrapper .popup_text a{
+    background-color: var(--secondary);
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+#popup_wrapper .popup_text img{
+    width: 100%;
+    /* height: 100%; */
+}
+#popup_wrapper .popup_text .vertical{
+    width: 40%;
 }
 
 @keyframes show_popup {
