--- a/css/css.css
+++ b/css/css.css
@@ -143,6 +143,7 @@ a{
 }
 #about span{
     font-size: 2em;
+    line-height: 1.5em;
     font-weight: 700;
     /* text-shadow: 0px 0px 10px #ffffff; */
     text-align: center;
