--- a/css/css.css
+++ b/css/css.css
@@ -56,6 +56,7 @@ a{
 #hello{
     /* height: 90vh; */
     /* background: red; */
+    perspective: 1px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -106,7 +107,7 @@ a{
     position: absolute;
     /* animation: show_hello_circles 5s infinite ease-in-out; */
     /* animation: show_hello_circles 2s forwards ease-in-out; */
-    animation: hello_circles_breath 3s infinite ease-in-out;
+    /* animation: hello_circles_breath 3s infinite ease-in-out; */
     animation-duration: 2s;
 }
 @keyframes show_hello_circles {
@@ -145,6 +146,7 @@ a{
     font-size: 2em;
     line-height: 1.5em;
     font-weight: 700;
+    /* opacity: 0; */
     /* text-shadow: 0px 0px 10px #ffffff; */
     text-align: center;
     color: rgb(0, 0, 0);
@@ -158,6 +160,20 @@ a{
         text-align: center;
     }
 }
+
+.element-animation {
+    /* margin: 2rem 0; */
+    /* font-size: 3rem; */
+    
+    /* Скроем элемент в начальном состоянии */
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  .element-animation.element-show {
+    opacity: 1 !important;
+    transition: all 1s;
+    transform: translateY(0%);
+  }
 
 #works{
     background: linear-gradient(180deg, var(--primary) 0%, rgba(252,254,236,1) 30%);
@@ -378,5 +394,16 @@ a{
     100%{
         opacity: 1;
         transform: translateY(0px);
+    }
+}
+
+@keyframes animate_from_down {
+    0%{
+        opacity: 0;
+        transform: translateY(300px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0px)
     }
 }
